--- a/src/sm/kpm_sm_v03.00/CMakeLists.txt
+++ b/src/sm/kpm_sm_v03.00/CMakeLists.txt
@@ -63,7 +63,7 @@ elseif(SM_ENCODING_KPM STREQUAL "ASN")
   target_link_libraries(kpm_sm PUBLIC -lm)
 
   target_include_directories(kpm_sm PRIVATE "ie/asn")
-  target_compile_options(kpm_sm PUBLIC "-DASN_DISABLE_OER_SUPPORT" -fPIC)
+  target_compile_options(kpm_sm PRIVATE "-DASN_DISABLE_OER_SUPPORT" -fPIC)
   target_compile_options(kpm_sm PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fPIC)
 
 
