--- a/test/encode_decode/e2ap/CMakeLists.txt
+++ b/test/encode_decode/e2ap/CMakeLists.txt
@@ -26,7 +26,7 @@ if(E2AP_ENCODING STREQUAL "ASN")
                         e2_agent
                         $<TARGET_OBJECTS:e2ap_ie_obj>
                         )
-  target_compile_options(test_e2ap_enc_dec_asn PUBLIC "-DASN_DISABLE_OER_SUPPORT")
+  target_compile_options(test_e2ap_enc_dec_asn PRIVATE "-DASN_DISABLE_OER_SUPPORT")
   target_compile_options(test_e2ap_enc_dec_asn PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter)
   target_include_directories(test_e2ap_enc_dec_asn PRIVATE "../../../src/lib/ap/ie/asn/")
 
