--- a/src/lib/sm/dec_asn_sm_common/CMakeLists.txt
+++ b/src/lib/sm/dec_asn_sm_common/CMakeLists.txt
@@ -11,5 +11,5 @@ add_library(sm_common_dec_asn_obj OBJECT
                               #target_link_libraries(sm_common_dec_asn_obj PRIVATE
                               # e2sm_kpm_asn1_obj)
               
-target_compile_options(sm_common_dec_asn_obj PUBLIC "-DASN_DISABLE_OER_SUPPORT")
+                              target_compile_options(sm_common_dec_asn_obj PRIVATE "-DASN_DISABLE_OER_SUPPORT")
 target_compile_options(sm_common_dec_asn_obj PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fPIC)
