--- a/test/encode_decode/sm/kpm/CMakeLists.txt
+++ b/test/encode_decode/sm/kpm/CMakeLists.txt
@@ -12,5 +12,5 @@ target_link_libraries(test_enc_dec_kpm_sm PUBLIC
 
 target_compile_options(test_enc_dec_kpm_sm PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter)
 
-target_compile_options(test_enc_dec_kpm_sm PUBLIC "-DASN_DISABLE_OER_SUPPORT -DPDU")
+target_compile_options(test_enc_dec_kpm_sm PRIVATE "-DASN_DISABLE_OER_SUPPORT -DPDU")
 
