--- a/src/sm/rc_sm/CMakeLists.txt
+++ b/src/sm/rc_sm/CMakeLists.txt
@@ -23,6 +23,7 @@ elseif(SM_ENCODING_RC STREQUAL "ASN" )
   add_subdirectory(ie/asn)
   add_subdirectory(ie/ir)
 
+  # Shared 
   add_library(rc_sm SHARED
                        # This dependency sucks!
                       ../../lib/ap/e2ap_types/common/e2ap_ran_function.c
@@ -40,8 +41,30 @@ elseif(SM_ENCODING_RC STREQUAL "ASN" )
                       )
   target_include_directories(rc_sm PRIVATE "ie/asn")
   target_compile_options(rc_sm  PRIVATE "-DASN_DISABLE_OER_SUPPORT")
-  target_compile_options(rc_sm PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter)
+  target_compile_options(rc_sm PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fvisibility=hidden )
   target_link_libraries(rc_sm PRIVATE -lm)  
+
+
+  # Static
+  add_library(rc_sm_static STATIC
+                       # This dependency sucks!
+                      ../../lib/ap/e2ap_types/common/e2ap_ran_function.c
+                    ${SM_ENCODING_RC_SRC}
+                      enc/rc_enc_asn.c 
+                      dec/rc_dec_asn.c 
+                      $<TARGET_OBJECTS:e2sm_rc_asn1_obj>
+                      $<TARGET_OBJECTS:e2sm_rc_ir_obj>
+                      $<TARGET_OBJECTS:3gpp_derived_ie_obj>
+                      $<TARGET_OBJECTS:3gpp_derived_ie_dec_asn_obj>
+                      $<TARGET_OBJECTS:3gpp_derived_ie_enc_asn_obj>
+                      $<TARGET_OBJECTS:sm_common_ie_obj>
+                      $<TARGET_OBJECTS:sm_common_dec_asn_obj>
+                      $<TARGET_OBJECTS:sm_common_enc_asn_obj>
+                      )
+  target_include_directories(rc_sm_static PRIVATE "ie/asn")
+  target_compile_options(rc_sm_static  PRIVATE "-DASN_DISABLE_OER_SUPPORT")
+  target_compile_options(rc_sm_static PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter -fvisibility=hidden )
+  target_link_libraries(rc_sm_static PRIVATE -lm)  
 
 elseif(SM_ENCODING_RC STREQUAL "FLATBUFFERS" )
   message(FATAL_ERROR "RC SM FB not implemented")
@@ -55,4 +78,5 @@ else()
 endif()
 
 target_compile_definitions(rc_sm PUBLIC ${SM_ENCODING_RC})
+target_compile_definitions(rc_sm_static PUBLIC ${SM_ENCODING_RC})
 
