--- a/src/sm/tc_sm/CMakeLists.txt
+++ b/src/sm/tc_sm/CMakeLists.txt
@@ -8,60 +8,41 @@ message(STATUS "Selected SM_ENCODING: ${SM_ENCODING_TC}")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../util)
 
+set(SM_ENCODING_TC_SRC 
+    # This dependency sucks!
+    ../../lib/ap/e2ap_types/common/e2ap_ran_function.c
+    ../sm_proc_data.c 
+    tc_sm_agent.c 
+    tc_sm_ric.c 
+    ../../util/byte_array.c 
+    ../../util/alg_ds/alg/defer.c 
+    ../../util/alg_ds/alg/eq_float.c 
+    ../../util/alg_ds/ds/seq_container/seq_arr.c 
+    ../../util/alg_ds/ds/seq_container/seq_ring.c 
+    ../../util/alg_ds/ds/assoc_container/assoc_rb_tree.c
+    ../../util/alg_ds/ds/assoc_container/bimap.c
+    ie/tc_data_ie.c 
+    ) 
 
 if(SM_ENCODING_TC STREQUAL "PLAIN")
-  add_library(tc_sm SHARED
-                      # This dependency sucks!
-                      ../../lib/ap/e2ap_types/common/e2ap_ran_function.c
-                      ../sm_proc_data.c 
-                      tc_sm_agent.c 
-                      tc_sm_ric.c 
-                     ../../util/byte_array.c 
-                     ../../util/alg_ds/alg/defer.c 
-                     ../../util/alg_ds/alg/eq_float.c 
-                     ../../util/alg_ds/ds/seq_container/seq_arr.c 
-                     ../../util/alg_ds/ds/seq_container/seq_ring.c 
-                     ../../util/alg_ds/ds/assoc_container/assoc_rb_tree.c
-                     ../../util/alg_ds/ds/assoc_container/bimap.c
-                      enc/tc_enc_plain.c 
-                      dec/tc_dec_plain.c 
-                      ie/tc_data_ie.c 
-                      )
+  set(SM_ENCODING_TC_SRC_PLAIN 
+   ${SM_ENCODING_TC_SRC}  
+    enc/tc_enc_plain.c 
+    dec/tc_dec_plain.c  
+    )
+  # Shared
+  add_library(tc_sm SHARED ${SM_ENCODING_TC_SRC_PLAIN}) 
+  target_compile_options(tc_sm PRIVATE -fvisibility=hidden)
 
+  # Static
+  add_library(tc_sm_static STATIC ${SM_ENCODING_TC_SRC_PLAIN}) 
 elseif(SM_ENCODING_TC STREQUAL "ASN" )
-
-  add_subdirectory(ie/asn)
-
-  add_library(tc_sm SHARED
-                      ../sm_proc_data.c 
-                      tc_sm_agent.c 
-                      tc_sm_ric.c 
-                      $<TARGET_OBJECTS:e2ap_ds_obj>
-                      enc/tc_enc_asn.c 
-                      dec/tc_dec_asn.c 
-                      )
-
-  target_include_directories(tc_sm  
-                            PRIVATE
-                            "ie/asn")
-
-  target_compile_options(tc_sm PUBLIC "-DASN_DISABLE_OER_SUPPORT")
-  target_compile_options(tc_sm PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter)
-
+  message(FATAL_ERROR "TC SM ASN not implemented")
 elseif(SM_ENCODING_TC STREQUAL "FLATBUFFERS" )
-  add_library(tc_sm SHARED
-                      ../sm_proc_data.c 
-                      tc_sm_agent.c 
-                      tc_sm_ric.c 
-                      $<TARGET_OBJECTS:e2ap_ds_obj>
-                      enc/tc_enc_fb.c 
-                      dec/tc_dec_fb.c 
-                      )
-else()
-
-
+  message(FATAL_ERROR "TC SM FB not implemented")
 endif()
 
 target_compile_definitions(tc_sm PUBLIC ${SM_ENCODING_TC})
+target_compile_definitions(tc_sm_static PUBLIC ${SM_ENCODING_TC})
 
 
