--- a/test/encode_decode/sm/kpm/CMakeLists.txt
+++ b/test/encode_decode/sm/kpm/CMakeLists.txt
@@ -3,10 +3,12 @@ project (test_enc_dec_kpm_sm)
 add_executable(test_enc_dec_kpm_sm 
   ../../../rnd/fill_rnd_data_kpm.c
   ../../../../src/util/time_now_us.c
+  ../../../../src/util/alg_ds/alg/defer.c 
   main.c)
 
-target_link_libraries(test_enc_dec_kpm_sm PUBLIC 
-                            kpm_sm
+target_link_libraries(test_enc_dec_kpm_sm 
+                            PUBLIC 
+                            kpm_sm_static
                             -lm
                             )
 
