--- a/test/sm/gtp_sm/CMakeLists.txt
+++ b/test/sm/gtp_sm/CMakeLists.txt
@@ -18,7 +18,7 @@ elseif(SM_ENCODING_GTP STREQUAL "FLATBUFFERS")
 endif()
 
 target_compile_definitions(test_gtp_sm PUBLIC ${SM_ENCODING_GTP})
-target_link_libraries(test_gtp_sm PUBLIC gtp_sm -pthread)
+target_link_libraries(test_gtp_sm PUBLIC gtp_sm_static -pthread)
 
 enable_testing()
 add_test(Unit_test_GTP test_gtp_sm)  
