--- a/test/sm/mac_sm/CMakeLists.txt
+++ b/test/sm/mac_sm/CMakeLists.txt
@@ -16,7 +16,7 @@ elseif(SM_ENCODING_MAC STREQUAL "FLATBUFFERS")
 endif()
 
 target_compile_definitions(test_mac_sm PUBLIC ${SM_ENCODING_MAC})
-target_link_libraries(test_mac_sm PUBLIC mac_sm -pthread)
+target_link_libraries(test_mac_sm PUBLIC mac_sm_static -pthread)
 
 enable_testing()
 add_test(Unit_test_MAC test_mac_sm)
