--- a/test/sm/pdcp_sm/CMakeLists.txt
+++ b/test/sm/pdcp_sm/CMakeLists.txt
@@ -17,7 +17,7 @@ elseif(SM_ENCODING_PDCP STREQUAL "FLATBUFFERS")
 endif()
 
 target_compile_definitions(test_pdcp_sm PUBLIC ${SM_ENCODING_PDCP})
-target_link_libraries(test_pdcp_sm PUBLIC pdcp_sm -pthread)
+target_link_libraries(test_pdcp_sm PUBLIC pdcp_sm_static -pthread)
 
 enable_testing()
 add_test(Unit_test_PDCP test_pdcp_sm)
