E2AP v3 start and Read RAN for v2

--- a/examples/emulator/agent/CMakeLists.txt
+++ b/examples/emulator/agent/CMakeLists.txt
@@ -11,7 +11,9 @@ add_library(test_agent_obj OBJECT
   ../../../test/rnd/fill_rnd_data_kpm.c                  
   ../../../test/rnd/fill_rnd_data_rc.c                  
   ../../../test/rnd/fill_rnd_data_slice.c                  
+  ../../../test/rnd/fill_rnd_data_e2_setup_req.c
   ../../../src/util/time_now_us.c
+  read_setup_ran.c
   sm_gtp.c
   sm_kpm.c
   sm_mac.c
@@ -21,6 +23,8 @@ add_library(test_agent_obj OBJECT
   sm_slice.c
   sm_tc.c
       )
+
+target_compile_definitions(test_agent_obj PRIVATE ${E2AP_VERSION})
 
 #############################
 # E2 Agent gNB
@@ -49,7 +53,7 @@ target_compile_definitions(emu_agent_gnb PRIVATE TEST_AGENT_GNB
                                                  TEST_AGENT_CU_DU_ID=0
                                                  ) #
 
-
+target_compile_definitions(emu_agent_gnb PRIVATE ${E2AP_VERSION})
 
 #############################
 # E2 Agent gNB-CU
@@ -77,6 +81,8 @@ target_compile_definitions(emu_agent_gnb_cu PRIVATE TEST_AGENT_GNB_CU
                                                     TEST_AGENT_CU_DU_ID=21
                                                     ) #
 
+target_compile_definitions(emu_agent_gnb_cu PRIVATE ${E2AP_VERSION})
+
 #############################
 # E2 Agent gNB-DU
 #############################
@@ -103,6 +109,7 @@ target_compile_definitions(emu_agent_gnb_du PRIVATE TEST_AGENT_GNB_DU
                                                     TEST_AGENT_CU_DU_ID=22
                                                     ) #
 
+target_compile_definitions(emu_agent_gnb_du PRIVATE ${E2AP_VERSION})
 #############################
 # E2 Agent eNB
 #############################
@@ -129,3 +136,4 @@ target_compile_definitions(emu_agent_enb PRIVATE TEST_AGENT_ENB
                                                  TEST_AGENT_CU_DU_ID=0
                                                  ) #
 
+target_compile_definitions(emu_agent_enb PRIVATE ${E2AP_VERSION})
