--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -38,6 +38,12 @@ add_library(e2_conf_obj OBJECT
                         conf_file.c
                         )
 
+add_library(e2_conv_obj OBJECT 
+                        conversions.c
+                        )
+
+
+
 
 add_library(e2_time_obj OBJECT 
                         time_now_us.c
@@ -46,6 +52,4 @@ add_library(e2_time_obj OBJECT
 add_library(e2_ngran_obj OBJECT
                          ngran_type.c
                          )
-
-
 
