--- a/src/agent/CMakeLists.txt
+++ b/src/agent/CMakeLists.txt
@@ -21,6 +21,7 @@ set(E2_AGENT_SRC
             $<TARGET_OBJECTS:e2ap_ap_obj>
             $<TARGET_OBJECTS:e2ap_ep_obj>
             $<TARGET_OBJECTS:e2ap_ds_obj>
+            $<TARGET_OBJECTS:e2_conv_obj>
             $<TARGET_OBJECTS:e2ap_alg_obj>
             $<TARGET_OBJECTS:e2_conf_obj>
             $<TARGET_OBJECTS:pending_events_obj>
