CU changed to be CUUP when sending the setup request in global E2 Node.

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -50,6 +50,6 @@ add_library(e2_time_obj OBJECT
                         )
 
 add_library(e2_ngran_obj OBJECT
-                         ngran_type.c
+                         ngran_types.c
                          )
 
