--- a/src/xApp/CMakeLists.txt
+++ b/src/xApp/CMakeLists.txt
@@ -76,7 +76,7 @@ set(XAPP_SRC
   $<TARGET_OBJECTS:sm_common_enc_asn_obj>
   $<TARGET_OBJECTS:sm_common_ie_obj>
 
-  ../util/ngran_type.c
+  ../util/ngran_types.c
   ../sm/mac_sm/ie/mac_data_ie.c
   ../sm/rlc_sm/ie/rlc_data_ie.c
   ../sm/pdcp_sm/ie/pdcp_data_ie.c
