Docker+Ubuntu 20 support added

--- a/test/agent-ric/CMakeLists.txt
+++ b/test/agent-ric/CMakeLists.txt
@@ -8,8 +8,6 @@ else()
   message(FATAL_ERROR "Unknown KPM version")
 endif()
 
-
-
 #############################
 # E2E Test E2-AGENT NEAR-RIC 
 #############################
@@ -33,19 +31,15 @@ add_executable(test_near_ric
 target_link_libraries(test_near_ric
                       PUBLIC 
                       e2_agent
-                      ${FlatCC} 
-                      #/home/mir/workspace/flatcc/lib/libflatccrt_d.a
-                      $<TARGET_OBJECTS:kpm_ric_info_common_obj>
-                      $<TARGET_OBJECTS:kpm_ric_info_obj>
-                      $<TARGET_OBJECTS:e2sm_common_ie_obj>
-                      $<TARGET_OBJECTS:3gpp_common_ie_obj>
-                      $<TARGET_OBJECTS:e2sm_common_ie_obj>
-                      $<TARGET_OBJECTS:e2sm_rc_ir_obj>
                       near_ric_test
+                      ${FlatCC} 
+		      kpm_sm_static
+		      rc_sm_static
+                      #/home/mir/workspace/flatcc/lib/libflatccrt_d.a
                       -pthread
                       -lsctp
                       -ldl)
 
-target_compile_options(test_near_ric PUBLIC "-DASN_DISABLE_JER_SUPPORT" "-DASN_DISABLE_OER_SUPPORT")
+target_compile_options(test_near_ric PRIVATE "-DASN_DISABLE_JER_SUPPORT" "-DASN_DISABLE_OER_SUPPORT")
 target_include_directories(test_near_ric PRIVATE ${KPM_ASN_DIR} )
 
