Rename KPM_V2 to KPM_V2_03 and KPM_V3 to KPM_V3_00

--- a/test/agent-ric-xapp/CMakeLists.txt
+++ b/test/agent-ric-xapp/CMakeLists.txt
@@ -1,6 +1,6 @@
-if(KPM_VERSION STREQUAL "KPM_V2")
+if(KPM_VERSION STREQUAL "KPM_V2_03")
   set(KPM_SRC ../../src/sm/kpm_sm/kpm_sm_v02.03/ie/kpm_data_ie.c)
-elseif(KPM_VERSION STREQUAL "KPM_V3")
+elseif(KPM_VERSION STREQUAL "KPM_V3_00")
   set(KPM_SRC ../../src/sm/kpm_sm/kpm_sm_v03.00/ie/kpm_data_ie.c)
 else()
   message(FATAL_ERROR "Unknown KPM version")
