--- a/test/encode_decode/sm/kpm/kpm_sm_v03.00/CMakeLists.txt
+++ b/test/encode_decode/sm/kpm/kpm_sm_v03.00/CMakeLists.txt
@@ -8,9 +8,9 @@ add_executable(test_enc_dec_kpm_sm
 
 
 
-if(KPM_VERSION STREQUAL "KPM_V2")
+if(KPM_VERSION STREQUAL "KPM_V2_03")
   set(KPM_ASN_DIR  "../../../../../src/sm/kpm_sm/kpm_sm_v02.03/ie/asn")
-elseif(KPM_VERSION STREQUAL "KPM_V3")
+elseif(KPM_VERSION STREQUAL "KPM_V3_00")
   set(KPM_ASN_DIR "../../../../../src/sm/kpm_sm/kpm_sm_v03.00/ie/asn")
 else()
   message(FATAL_ERROR "Unknown KPM version")
