--- a/src/xApp/CMakeLists.txt
+++ b/src/xApp/CMakeLists.txt
@@ -9,11 +9,11 @@ else()
   message(FATAL_ERROR "Unknown type")
 endif()
 
-if(KPM_VERSION STREQUAL "KPM_V2")
+if(KPM_VERSION STREQUAL "KPM_V2_03")
 set(KPM_VERSION_SRC 
   ../sm/kpm_sm/kpm_sm_v02.03/ie/kpm_data_ie.c
   )
-elseif(KPM_VERSION STREQUAL "KPM_V3")
+elseif(KPM_VERSION STREQUAL "KPM_V3_00")
 set(KPM_VERSION_SRC 
   ../sm/kpm_sm/kpm_sm_v03.00/ie/kpm_data_ie.c
   )
