--- a/test/agent-ric/CMakeLists.txt
+++ b/test/agent-ric/CMakeLists.txt
@@ -1,7 +1,7 @@
-if(KPM_VERSION STREQUAL "KPM_V2")
+if(KPM_VERSION STREQUAL "KPM_V2_03")
   set(KPM_SRC ../../src/sm/kpm_sm/kpm_sm_v02.03/ie/kpm_data_ie.c)
   set(KPM_ASN_DIR  "../../src/sm/kpm_sm/kpm_sm_v02.03/ie/asn")
-elseif(KPM_VERSION STREQUAL "KPM_V3")
+elseif(KPM_VERSION STREQUAL "KPM_V3_00")
   set(KPM_SRC ../../src/sm/kpm_sm/kpm_sm_v03.00/ie/kpm_data_ie.c)
   set(KPM_ASN_DIR  "../../src/sm/kpm_sm/kpm_sm_v03.00/ie/asn")
 else()
