--- a/src/sm/rc_sm/ie/ir/CMakeLists.txt
+++ b/src/sm/rc_sm/ie/ir/CMakeLists.txt
@@ -47,11 +47,13 @@ set (IR_RC_SRC
   ran_param_insertion.c
   ran_param_ins_ind.c
   ran_param_list.c
+  ran_param_lst_struct.c
   ran_param_req.c
   ran_param_struct.c
   ran_param_test.c
   ran_param_test_list.c
   ran_param_test_struct.c
+  ran_param_type.c
   rrc_state.c
   rrc_state_lst.c
   seq_call_proc_type.c
