--- a/test/encode_decode/sm/rc/CMakeLists.txt
+++ b/test/encode_decode/sm/rc/CMakeLists.txt
@@ -15,3 +15,9 @@ target_compile_options(test_enc_dec_rc_sm PRIVATE -Wno-missing-field-initializer
 
 target_compile_options(test_enc_dec_rc_sm  PRIVATE "-DASN_DISABLE_OER_SUPPORT -DPDU")
 
+  #####
+  ### CTest 
+  ####
+  enable_testing()
+  add_test(Unit_test_enc_dec_rc_sm test_enc_dec_rc_sm)
+
