--- a/test/encode_decode/sm/kpm/kpm_sm_v02.01/CMakeLists.txt
+++ b/test/encode_decode/sm/kpm/kpm_sm_v02.01/CMakeLists.txt
@@ -16,3 +16,9 @@ target_link_libraries(test_enc_dec_kpm_sm
 
 target_compile_options(test_enc_dec_kpm_sm PRIVATE -Wno-missing-field-initializers -Wno-unused-parameter)
 
+  #####
+  ### CTest 
+  ####
+  enable_testing()
+  add_test(Unit_test_enc_dec_kpm_sm_v02.01 test_enc_dec_kpm_sm)
+
