Clang warnings suppressed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ endif()
 
 #https://gcc.gnu.org/bugzilla/show_bug.cgi?id=110157
 
-set(SANITIZER "ADDRESS" CACHE STRING "Sanitizers")
+set(SANITIZER "NONE" CACHE STRING "Sanitizers")
 set_property(CACHE SANITIZER PROPERTY STRINGS "NONE" "ADDRESS" "THREAD")
 message(STATUS "Selected SANITIZER TYPE: ${SANITIZER}")
 
@@ -215,7 +215,7 @@ set(E2AP_ENCODING "ASN" CACHE STRING "The E2AP encoding to use")
 set_property(CACHE E2AP_ENCODING PROPERTY STRINGS "ASN" "FLATBUFFERS")
 message(STATUS "Selected E2AP_ENCODING: ${E2AP_ENCODING}")
 
-set(E2AP_VERSION "E2AP_V2" CACHE STRING "E2AP version")
+set(E2AP_VERSION "E2AP_V3" CACHE STRING "E2AP version")
 set_property(CACHE E2AP_VERSION PROPERTY STRINGS "E2AP_V1" "E2AP_V2" "E2AP_V3")
 message(STATUS "Selected E2AP_VERSION: ${E2AP_VERSION}")
 
