Docker files updated and README for xApps added

--- a/test/docker/ubuntu22/Dockerfile
+++ b/test/docker/ubuntu22/Dockerfile
@@ -28,26 +28,17 @@ WORKDIR /opt
 
 #swig
 RUN git clone https://github.com/swig/swig.git /opt/swig
-RUN cd swig && ./autogen.sh && ./configure --prefix=/usr/ && make && make install
+RUN cd swig && git checkout release-4.1 && ./autogen.sh && ./configure --prefix=/usr/ && make  -j8 && make install
 
 WORKDIR /
-
-#asn1
-RUN git clone https://github.com/vlm/asn1c.git /asn1c
-RUN cd asn1c && \
-    autoreconf -iv && \
-    ./configure && \
-    make && \
-    make install
-
 
 #flexric
 RUN git clone https://gitlab.eurecom.fr/mosaic5g/flexric /flexric
 WORKDIR /flexric
-RUN git checkout 035fd2e8f9a9d2c16df8d44c9e8c13ccddf9ff19
+RUN git checkout dev 
 RUN mkdir build && \
     cd build && \
-    cmake -DCMAKE_C_COMPILER=gcc-12 .. && make && make install
+    cmake -DCMAKE_C_COMPILER=gcc-12 .. && make -j8 && make install
 
 WORKDIR /flexric
 CMD ["sh", "-c", "/flexric/build/examples/ric/nearRT-RIC > /usr/local/etc/flexric/flexric-remote.log 2>&1"]
