Add hashtable utility and UE context stats in GTP and MAC layer
Changes include addition of a hashtable utility that provides different functionalities including creation, destruction, insertion, removal, and retrieval of nodes. The hashtable can handle key existence checks and resizing. Moreover, UE context stats have been added in the GTP and MAC layer offering more robust data handling and tunnelling.

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -54,3 +54,6 @@ add_library(e2_ngran_obj OBJECT
                          ngran_types.c
                          )
 
+add_library(hashtable OBJECT
+        hashtable/hashtable.c
+)
